# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes, Piotr Ożarowski

2007-01-01 Piotr Ożarowski <ozarow@gmail.com>
	* Filmweb movie plugin updated
	* Added "limit search results to x movies" in preferences
	* Scroll movie list when selecting first/prev/next/last movie button
	* Copy video codec data when cloning movie

2006-12-30 Piotr Ożarowski <ozarow@gmail.com>
	* Compare lower() values while importing movies
	* Seen icon moved near to rating, loaned icon removed
	* Speed up main list filling
	* Hide number column option added
	* Add Jessica's icon for seen/unseen movies

2006-12-30 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Under MacOSX Preview.app is used for pdfs now

---- 0.9~rc1 ---

2006-12-24 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added some gtk dialogs when converting old db format
	* Fixed some win32 setup includes

2006-12-22 Piotr Ożarowski <ozarow@gmail.com>
	* Polish manpage updated

2006-12-20 Piotr Ożarowski <ozarow@gmail.com>
	* Version changed to 0.9~rc1 (0.7 and 0.8 are skipped because of lots of changes in this release)
	* Merge function and MySQL/PostgreSQL backup disabled for now
	* English manpage updated
	* Homepage updated
	* --fix-db option removed (no longer needed)

2006-12-18 Piotr Ożarowski <ozarow@gmail.com>
	* Detect old DB (and convert it) in restore function
	* UI changes (rest of windows converted to dialogs, minor changes)

2006-12-18 Jessica K. Parth <Jessica.K.P@women-at-work.org>
	* tooltips to mange people dialog added
	* german translation updated (100% finished)

2006-12-17 Jessica K. Parth <Jessica.K.P@women-at-work.org>
	* Import CSV plugin updated to work with multiple files

2006-12-17 Piotr Ożarowski <ozarow@gmail.com>
	* AniDB, Filmweb, Stopklatka and TanukiAnime movie plugins updated
	* Upgrade from old database: detect SQLite3 and print some hints
	* Add "commentary" to the language types

2006-12-16 Piotr Ożarowski <ozarow@gmail.com>
	* WP, FDb and Onet movie plugins updated
	* movie plugins: