@@ -9,6 +9,7 @@ Griffith ChangeLog
 	* Added "limit search results to x movies" in preferences
 	* Scroll movie list when selecting first/prev/next/last movie button
 	* Copy video codec data when cloning movie
+	* Fixed displaying volume/collection loan status
 
 2006-12-30 Piotr Ożarowski <ozarow@gmail.com>
 	* Compare lower() values while importing movies
